--- a/templates/About.html
+++ b/templates/About.html
@@ -30,7 +30,7 @@
     </div>
     <div class="flex justify-center mt-5 fade-in" style="width: 100vw;">
 
-        <img src="../static/media/pp.jpg" class="fade-in rounded-full object-cover" alt=""
+        <img src="../static/media/pp-removebg-preview.png" class="fade-in rounded object-cover " alt=""
             style="width: 15vw; height: 30vh;">
 
     </div>
