--- a/templates/competences.html
+++ b/templates/competences.html
@@ -28,182 +28,187 @@
 
 
     </div>
-        <div style="width: 99vw;" class="flex mt-3 ml-2 justify-center">
-            <div class="input-group text-white " style="width: 20vw;">
-                <span class="input-group-text bg-white/40 backdrop-blur text-black border-hidden" style="font-family: 'titre', sans-serif !important">Catégories</span>
-                <select name="" id="Catégories" class="form-select bg-white/40 backdrop-blur text-black border-hidden" style="font-family: 'titre', sans-serif !important">
-                    <option value="" class="bg-white backdrop-blur"></option>
-                    <option value="front-end" class="bg-light-blue backdrop-blur" style="font-family: 'titre', sans-serif !important">Front-end</option>
-                    <option value="back-end" class="bg-light-green backdrop-blur" style="font-family: 'titre', sans-serif !important">Back-end</option>
-                    <option value="databases" class="bg-light-pink backdrop-blur" style="font-family: 'titre', sans-serif !important">Databases</option>
-                </select>
-                
-            </div>
+    <div style="width: 99vw;" class="flex mt-3 ml-2 justify-center">
+        <div class="input-group text-white word " style="width: 20vw;">
+            <span class="input-group-text bg-white/40 backdrop-blur text-black border-hidden"
+                style="font-family: 'titre', sans-serif !important">Catégories</span>
+            <select name="" id="Catégories" class=" form-select bg-white/40 backdrop-blur text-black border-hidden"
+                style="font-family: 'titre', sans-serif !important">
+                <option value="" class="bg-white backdrop-blur"></option>
+                <option value="front-end" class="bg-light-blue backdrop-blur"
+                    style="font-family: 'titre', sans-serif !important">Front-end</option>
+                <option value="back-end" class="bg-light-green backdrop-blur"
+                    style="font-family: 'titre', sans-serif !important">Back-end</option>
+                <option value="databases" class="bg-light-pink backdrop-blur"
+                    style="font-family: 'titre', sans-serif !important">Databases</option>
+            </select>
 
         </div>
-        <div style="width: 99vw; height: 79vh; overflow:scroll;" class="flex justify-center mt-4 fade-in">
 
-            <div class="grid grid-cols-3 gap-24 mb-5">
-                <div id="HTML" class=" rounded p-5 fade-in" style="width: 20vw;">
-                    <div class="flex justify-center">
-                        <img src="../static/media/html.png" alt="" class="r" style="width: 10vw; height: 20vh;">
+    </div>
+    <div style="width: 99vw; height: 79vh; overflow:scroll;" class="flex justify-center mt-4 fade-in">
 
-                    </div>
-                    <div class="flex justify-center">
-
-                        <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">HTML</h1>
-
-                    </div>
-                    <div class="w-full bg-rose-950 rounded-full mt-4 h-3 ">
-                        <div class="bg-rose-500  h-3 rounded-full" style="width: 80%"></div>
-                    </div>
-                </div>
-                <div  id="CSS" class=" rounded p-5 fade-in" style="width: 20vw;">
-                    <div class="flex justify-center">
-                        <img src="../static/media/csspng.png" alt="" class="r" style="width: 10vw; height: 20vh;">
-
-                    </div>
-                    <div class="flex justify-center">
-
-                        <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">CSS</h1>
-                    </div>
-                    <div class="w-full bg-rose-950 rounded-full mt-4 h-3 ">
-                        <div class="bg-rose-500  h-3 rounded-full" style="width: 80%"></div>
-                    </div>
+        <div class="grid grid-cols-3 gap-24 mb-5">
+            <div id="HTML" class=" rounded p-5 fade-in" style="width: 20vw;">
+                <div class="flex justify-center">
+                    <img src="../static/media/html.png" alt="" class="r" style="width: 10vw; height: 20vh;">
 
                 </div>
-                <div  id="JS" class=" rounded p-5 fade-in" style="width: 20vw;">
-                    <div class="flex justify-center">
-                        <img src="../static/media/js.png" alt="" class="r" style="width: 10vw; height: 20vh;">
+                <div class="flex justify-center">
 
-                    </div>
-                    <div class="flex justify-center">
-
-                        <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">JavaScript</h1>
-                    </div>
-                    <div class="w-full bg-rose-950 rounded-full mt-4 h-3 ">
-                        <div class="bg-rose-500  h-3 rounded-full" style="width: 70%"></div>
-                    </div>
+                    <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">HTML</h1>
 
                 </div>
-                <div  id="PHP" class=" rounded p-5 fade-in" style="width: 20vw;">
-                    <div class="flex justify-center">
-                        <img src="../static/media/PHP.png" alt="" class="r" style="width: 10vw; height: 20vh;">
-
-                    </div>
-                    <div class="flex justify-center">
-
-                        <h1 class="text-white flex justify-center mt-4" style="width: 15vw;">PHP</h1>
-                    </div>
-                    <div class="w-full bg-rose-950 rounded-full mt-4 h-3 ">
-                        <div class="bg-rose-500  h-3 rounded-full" style="width: 75%"></div>
-                    </div>
+                <div class="w-full bg-white/30 rounded-full mt-4 h-3 ">
+                    <div class="bg-white/50  h-3 rounded-full" style="width: 80%"></div>
+                </div>
+            </div>
+            <div id="CSS" class=" rounded p-5 fade-in" style="width: 20vw;">
+                <div class="flex justify-center">
+                    <img src="../static/media/csspng.png" alt="" class="r" style="width: 10vw; height: 20vh;">
 
                 </div>
-                <div  id="c-sharp" class=" rounded p-5 fade-in" style="width: 20vw;">
-                    <div class="flex justify-center">
-                        <img src="../static/media/csharp.svg.png" alt="" class="r" style="width: 10vw; height: 20vh;">
+                <div class="flex justify-center">
 
-                    </div>
-                    <div class="flex justify-center">
-
-                        <h1 class="text-white flex justify-center mt-4" style="width: 15vw;">C-sharp</h1>
-                    </div>
-                    <div class="w-full bg-rose-950 rounded-full mt-4 h-3 ">
-                        <div class="bg-rose-500  h-3 rounded-full" style="width: 62%"></div>
-                    </div>
-
+                    <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">CSS</h1>
                 </div>
-                <div  id="Mysql" class=" rounded p-5 fade-in" style="width: 20vw;">
-                    <div class="flex justify-center">
-                        <img src="../static/media/mysql.png" alt="" class="r" style="width: 10vw; height: 20vh;">
-
-                    </div>
-                    <div class="flex justify-center">
-
-                        <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">MySQL</h1>
-                    </div>
-                    <div class="w-full bg-rose-950 rounded-full mt-4 h-3 ">
-                        <div class="bg-rose-500  h-3 rounded-full" style="width: 70%"></div>
-                    </div>
-
+                <div class="w-full bg-white/30 rounded-full mt-4 h-3 ">
+                    <div class="bg-white/50  h-3 rounded-full" style="width: 80%"></div>
                 </div>
-                <div  id="postgres" class=" rounded p-5 fade-in" style="width: 20vw;">
-                    <div class="flex justify-center">
-                        <img src="../static/media/postgres.png" alt="" class="" style="width: 10vw; height: 20vh;">
-
-                    </div>
-                    <div class="flex justify-center">
-
-                        <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">PostgresSQL</h1>
-                    </div>
-                    <div class="w-full bg-rose-950 rounded-full mt-4 h-3 ">
-                        <div class="bg-rose-500  h-3 rounded-full" style="width: 80%"></div>
-                    </div>
-
-                </div>
-                <div  id="sqlserver" class=" rounded p-5 fade-in" style="width: 20vw;">
-                    <div class="flex justify-center">
-                        <img src="../static/media/sqlserver.png" alt="" class="" style="width: 10vw; height: 20vh;">
-
-                    </div>
-                    <div class="flex justify-center">
-
-                        <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">SQL Server</h1>
-                    </div>
-                    <div class="w-full bg-rose-950 rounded-full mt-4 h-3 ">
-                        <div class="bg-rose-500  h-3 rounded-full" style="width: 80%"></div>
-                    </div>
-
-                </div>
-                <div  id="Python" class=" rounded p-5 fade-in" style="width: 20vw;">
-                    <div class="flex justify-center">
-                        <img src="../static/media/python.png" alt="" style="width: 10vw; height: 20vh;">
-
-                    </div>
-                    <div class="flex justify-center">
-
-                        <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">Python</h1>
-                    </div>
-                    <div class="w-full bg-rose-950 rounded-full mt-4 h-3 ">
-                        <div class="bg-rose-500  h-3 rounded-full" style="width: 60%"></div>
-                    </div>
-
-                </div>
-                <div  id="bootstrap" class=" rounded p-5 fade-in" style="width: 20vw;">
-                    <div class="flex justify-center">
-                        <img src="../static/media/Bootstrap.png" alt="" class="" style="width: 10vw; height:20vh;">
-
-                    </div>
-                    <div class="flex justify-center">
-
-                        <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">Bootstrap</h1>
-                    </div>
-                    <div class="w-full bg-rose-950 rounded-full mt-4 h-3 ">
-                        <div class="bg-rose-500  h-3 rounded-full" style="width: 80%"></div>
-                    </div>
-
-                </div>
-                <div  id="Tailwind" class=" rounded p-5 fade-in" style="width: 20vw;">
-                    <div class="flex justify-center">
-                        <img src="../static/media/Tailwindcss.svg.png" alt="" class="" style="width: 10vw; height: 20vh;">
-
-                    </div>
-                    <div class="flex justify-center">
-
-                        <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">Tailwind CSS</h1>
-                    </div>
-                    <div class="w-full bg-rose-950 rounded-full mt-4 h-3 ">
-                        <div class="bg-rose-500  h-3 rounded-full" style="width: 80%"></div>
-                    </div>
-
-                </div>
-
-
-
 
             </div>
-            
+            <div id="JS" class=" rounded p-5 fade-in" style="width: 20vw;">
+                <div class="flex justify-center">
+                    <img src="../static/media/js.png" alt="" class="r" style="width: 10vw; height: 20vh;">
+
+                </div>
+                <div class="flex justify-center">
+
+                    <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">JavaScript</h1>
+                </div>
+                <div class="w-full bg-white/30 rounded-full mt-4 h-3 ">
+                    <div class="bg-white/50  h-3 rounded-full" style="width: 70%"></div>
+                </div>
+
+            </div>
+            <div id="PHP" class=" rounded p-5 fade-in" style="width: 20vw;">
+                <div class="flex justify-center">
+                    <img src="../static/media/PHP.png" alt="" class="r" style="width: 10vw; height: 20vh;">
+
+                </div>
+                <div class="flex justify-center">
+
+                    <h1 class="text-white flex justify-center mt-4" style="width: 15vw;">PHP</h1>
+                </div>
+                <div class="w-full bg-white/30 rounded-full mt-4 h-3 ">
+                    <div class="bg-white/50  h-3 rounded-full" style="width: 75%"></div>
+                </div>
+
+            </div>
+            <div id="c-sharp" class=" rounded p-5 fade-in" style="width: 20vw;">
+                <div class="flex justify-center">
+                    <img src="../static/media/csharp.svg.png" alt="" class="r" style="width: 10vw; height: 20vh;">
+
+                </div>
+                <div class="flex justify-center">
+
+                    <h1 class="text-white flex justify-center mt-4" style="width: 15vw;">C-sharp</h1>
+                </div>
+                <div class="w-full bg-white/30 rounded-full mt-4 h-3 ">
+                    <div class="bg-white/50  h-3 rounded-full" style="width: 62%"></div>
+                </div>
+
+            </div>
+            <div id="Mysql" class=" rounded p-5 fade-in" style="width: 20vw;">
+                <div class="flex justify-center">
+                    <img src="../static/media/mysql.png" alt="" class="r" style="width: 10vw; height: 20vh;">
+
+                </div>
+                <div class="flex justify-center">
+
+                    <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">MySQL</h1>
+                </div>
+                <div class="w-full bg-white/30 rounded-full mt-4 h-3 ">
+                    <div class="bg-white/50  h-3 rounded-full" style="width: 70%"></div>
+                </div>
+
+            </div>
+            <div id="postgres" class=" rounded p-5 fade-in" style="width: 20vw;">
+                <div class="flex justify-center">
+                    <img src="../static/media/postgres.png" alt="" class="" style="width: 10vw; height: 20vh;">
+
+                </div>
+                <div class="flex justify-center">
+
+                    <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">PostgresSQL</h1>
+                </div>
+                <div class="w-full bg-white/30 rounded-full mt-4 h-3 ">
+                    <div class="bg-white/50  h-3 rounded-full" style="width: 80%"></div>
+                </div>
+
+            </div>
+            <div id="sqlserver" class=" rounded p-5 fade-in" style="width: 20vw;">
+                <div class="flex justify-center">
+                    <img src="../static/media/sqlserver.png" alt="" class="" style="width: 10vw; height: 20vh;">
+
+                </div>
+                <div class="flex justify-center">
+
+                    <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">SQL Server</h1>
+                </div>
+                <div class="w-full bg-white/30 rounded-full mt-4 h-3 ">
+                    <div class="bg-white/50  h-3 rounded-full" style="width: 80%"></div>
+                </div>
+
+            </div>
+            <div id="Python" class=" rounded p-5 fade-in" style="width: 20vw;">
+                <div class="flex justify-center">
+                    <img src="../static/media/python.png" alt="" style="width: 10vw; height: 20vh;">
+
+                </div>
+                <div class="flex justify-center">
+
+                    <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">Python</h1>
+                </div>
+                <div class="w-full bg-white/30 rounded-full mt-4 h-3 ">
+                    <div class="bg-white/50  h-3 rounded-full" style="width: 60%"></div>
+                </div>
+
+            </div>
+            <div id="bootstrap" class=" rounded p-5 fade-in" style="width: 20vw;">
+                <div class="flex justify-center">
+                    <img src="../static/media/Bootstrap.png" alt="" class="" style="width: 10vw; height:20vh;">
+
+                </div>
+                <div class="flex justify-center">
+
+                    <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">Bootstrap</h1>
+                </div>
+                <div class="w-full bg-white/30 rounded-full mt-4 h-3 ">
+                    <div class="bg-white/50  h-3 rounded-full" style="width: 80%"></div>
+                </div>
+
+            </div>
+            <div id="Tailwind" class=" rounded p-5 fade-in" style="width: 20vw;">
+                <div class="flex justify-center">
+                    <img src="../static/media/Tailwindcss.svg.png" alt="" class="" style="width: 10vw; height: 20vh;">
+
+                </div>
+                <div class="flex justify-center">
+
+                    <h1 class="text-white flex justify-center mt-4" style="width: 10vw;">Tailwind CSS</h1>
+                </div>
+                <div class="w-full bg-white/30 rounded-full mt-4 h-3 ">
+                    <div class="bg-white/50  h-3 rounded-full" style="width: 80%"></div>
+                </div>
+
+            </div>
+
+
+
+
+        </div>
+
 
     </div>
 
@@ -240,10 +245,22 @@
     <script src="https://cdn.jsdelivr.net/npm/@vitalets/google-translate-api"></script>
 
     <script>
-        $('#Catégories').change(()=>
-        {
-            if($('#Catégories').val() == 'front-end')
-            {
+        anime.timeline({ loop: false })
+            .add({
+                targets: '.ml15 .word',
+                scale: [14, 1],
+                opacity: [0, 1],
+                easing: "easeOutCirc",
+                duration: 800,
+                delay: (el, i) => 800 * i
+            }).add({
+                targets: '.ml15',
+                duration: 1000,
+                easing: "easeOutExpo",
+                delay: 1200
+            });
+        $('#Catégories').change(() => {
+            if ($('#Catégories').val() == 'front-end') {
 
 
 
@@ -283,8 +300,7 @@
                 $('#Tailwind').addClass('fade-in')
 
             }
-            if($('#Catégories').val() == 'back-end')
-            {
+            if ($('#Catégories').val() == 'back-end') {
                 $('#PHP').addClass('hidden')
                 $('#Mysql').addClass('hidden')
                 $('#Python').addClass('hidden')
@@ -323,8 +339,7 @@
 
 
             }
-            if($('#Catégories').val() == 'databases')
-            {
+            if ($('#Catégories').val() == 'databases') {
                 $('#PHP').removeClass('fade-in')
                 $('#Mysql').removeClass('fade-in')
                 $('#Python').removeClass('fade-in')
@@ -342,12 +357,12 @@
 
                 $('#bootstrap').addClass('hidden')
 
-                
+
                 $('#Tailwind').addClass('hidden')
 
                 $('#Tailwind').addClass('hidden')
-                
-                
+
+
                 $('#PHP').addClass('hidden')
 
 
@@ -366,8 +381,7 @@
 
 
             }
-            if($('#Catégories').val() == '')
-            {
+            if ($('#Catégories').val() == '') {
                 $('#HTML').removeClass('hidden')
                 $('#CSS').removeClass('hidden')
                 $('#bootstrap').removeClass('hidden')
@@ -393,7 +407,7 @@
 
 
 
-                
+
 
 
 
