--- a/templates/home.html
+++ b/templates/home.html
@@ -122,7 +122,7 @@
 window.onload = function() {
   var textWrapper = document.querySelector('.ml11 .letters');
 
-  textWrapper.innerHTML = textWrapper.textContent.replace(/([^\x00-\x80]|\w)/g, "<span class='letter'>$&</span>");
+  textWrapper.innerHTML = textWrapper.textContent.replace(/([^\x00-\x80]|\w|,)/g, "<span class='letter'>$&</span>");
 
   anime.timeline({ loop: false })
     .add({
