--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -90,6 +90,61 @@ body{margin: 0; padding: 0;}
     transform: translateY(0);
 }
 
+@font-face {
+    font-family: 'titre';
+    src: url('../static/font/Lobster-Regular.ttf') format('truetype');
+    /* Ajoutez une version WOFF pour une compatibilité étendue */
+    /* src: url('../static/font/game_over.woff') format('woff'), */
+    
+  }
+  .ml15 {
+  text-transform: uppercase;
+  letter-spacing: 0em;
+
+}
+.ml112 .letter2 {
+  font-family: 'titre', sans-serif !important
+}
+
+.ml112 .line2 {
+  opacity: 0;
+  position: absolute;
+  left: 0;
+  height: 20vh;
+  width: 3px;
+  background-color: #fff;
+  transform-origin: 0 100%;
+}
+
+.ml112 .text-wrapper2 {
+  position: relative;
+  display: inline-block;
+
+}
+
+.ml112 .line2 {
+  opacity: 0;
+  left: 0;
+  height: 100%;
+  width: 3px;
+  background-color: #fff;
+  transform-origin: 0 50%;
+}
+
+.let {
+    color: initial; /* Réinitialiser la couleur à sa valeur par défaut */
+  }
+.ml112 .letter {
+  display: inline-block;
+  line-height: 1em;
+}
+.ml15 .word {
+  font-family: 'titre', sans-serif !important;
+  display: inline2-block;
+}
+  #singature {
+    font-family: 'titre', sans-serif
+  }
 ::-webkit-scrollbar {
     background-color: #555;
     border-radius: 6px;
